--- a/assets/index.html
+++ b/assets/index.html
@@ -225,7 +225,7 @@
 
                 <div class="solution-row">
 
-                    <p class="solution-small_head">OUR SOLUTION</p>
+                    <p class="solution-small_head">OUR SERVICES</p>
                     <h2 class="solution-head">We help seizing technology & business opportunity</h2>
                     <h4 class="solution-head_para">our technology services are designed to build the capabilities required to seize your technology opportunity</h4>
 
