--- a/assets/index.html
+++ b/assets/index.html
@@ -227,11 +227,99 @@
 
                     <p class="solution-small_head">OUR SERVICES</p>
                     <h2 class="solution-head">We help seizing technology & business opportunity</h2>
-                    <h4 class="solution-head_para">our technology services are designed to build the capabilities required to seize your technology opportunity</h4>
+                    <h4 class="solution-head_para">our technology services are designed to build the capabilities
+                        required to seize your technology opportunity</h4>
 
-                        <div class="solu-parent">
+                    <div class="solu-parent">
+
+                        <div class="solu-child_area">
+
+                            <figure class="solu-fig">
+                                <img class="solu-img" src="./tech-img.png" alt="">
+                            </figure>
+
+                            <div class="solu-text_area">
+
+                                <h2 class="solu-textHead">Technology Solutions</h2>
+                                <p class="solu-textPara">Design and accelerate future-ready technology strategies.</p>
+                                <p class="solu-textTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                                    iusto fugiat earum nesciunt, eligendi animi doloremque magnam obcaecati nulla iste,
+                                    nemo pariatur rerum necessitatibus amet quasi quam sapiente inventore maiores.</p>
+
+                                <div class="solu-text_card">
+
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+
+                                </div>
+
+                                <button class="solu-btn">Send a request</button>
+
+                            </div>
 
                         </div>
+
+                        <div class="solu-child_area">
+
+                            <figure class="solu-fig">
+                                <img class="solu-img" src="./bus-stars.png" alt="">
+                            </figure>
+
+                            <div class="solu-text_area">
+
+                                <h2 class="solu-textHead">Strategy & Business Solutions</h2>
+                                <p class="solu-textPara">Design and accelerate future-ready technology strategies.</p>
+                                <p class="solu-textTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                                    iusto fugiat earum nesciunt, eligendi animi doloremque magnam obcaecati nulla iste,
+                                    nemo pariatur rerum necessitatibus amet quasi quam sapiente inventore maiores.</p>
+
+                                <div class="solu-text_card">
+
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+
+                                </div>
+
+                                <button class="solu-btn">Send a request</button>
+
+                            </div>
+
+                        </div>
+
+                        <div class="solu-child_area">
+
+                            <figure class="solu-fig">
+                                <img class="solu-img" src="./tech-img.png" alt="">
+                            </figure>
+
+                            <div class="solu-text_area">
+
+                                <h2 class="solu-textHead">Trading Solutions</h2>
+                                <p class="solu-textPara">Design and accelerate future-ready technology strategies.</p>
+                                <p class="solu-textTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                                    iusto fugiat earum nesciunt, eligendi animi doloremque magnam obcaecati nulla iste,
+                                    nemo pariatur rerum necessitatibus amet quasi quam sapiente inventore maiores.</p>
+
+                                <div class="solu-text_card">
+
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card"></div>
+
+                                </div>
+
+                                <button class="solu-btn">Send a request</button>
+
+                            </div>
+
+                        </div>
+
+                    </div>
                 </div>
 
             </div>
@@ -239,8 +327,141 @@
         </section>
 
 
+        <section id="testimonials">
+
+            <div class="test-container">
+
+                <div class="test-row">
+
+                    <div class="test-parent">
+
+                        <div class="twoHeaders">
+                            <small class="test-smallHead"><i class="fa fa-star" aria-hidden="true"></i>Client
+                                feedback</small>
+                            <h2 class="test-head">Our clients & their opinion</h2>
+                        </div>
+
+                        <div class="test-child">
+
+                            <figure class="test-fig">
+                                <img class="test-img" src="./image-3.png" alt="">
+                            </figure>
+
+                            <div class="test-textArea">
+
+                                <img class="test-quote" src="./quote-mark-2.png" alt="">
+
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quis
+                                    quam
+                                    voluptate ipsa corrupti libero eaque obcaecati asperiores
+                                    exercitationem, itaque
+                                    beatae est facilis cupiditate similique dolores suscipit sed aperiam
+                                    voluptates!</p>
+
+                                <div class="client-name_test">
+
+                                    <h3 class="test-name">Siddiq</h3>
+                                    <small class="test-name_ocp">- Student -</small>
+
+                                </div>
+                            </div>
+
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+
+        <section id="contact">
+
+            <div class="con-container">
+
+                <div class="con-row">
+
+                    <div class="con-parent">
+
+                        <div class="con-text_area">
+                            <h2 class="con-textHead">Get started with us today.</h2>
+                            <p class="con-textPara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                                eligendi eius quaerat
+                                consequuntur reprehenderit itaque!</p>
+                        </div>
+
+                        <div class="con-btnArea">
+                            <button class="get-btn">Get Started</button>
+                            <button class="con-btn">Contact Us</button>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- <hr> -->
 
     </main>
+
+    <footer>
+
+        <div class="foot-container">
+
+            <div class="foot-row">
+
+                <div class="foot-parent">
+
+                    <div class="foot-parentText">
+
+                        <small class="foot-smallHead">CONTACT</small>
+                        <h2 class="foot-head">Take advantage of expert knowledge</h2>
+                        <p class="foot-para">Feel free to get in touch wwith us via email or phone</p>
+
+                        <div class="foot-mailPhone">
+                            <small class="foot-mail">info@bestbridge.com</small>
+                            <small class="foot-phone">+233 030008100</small>
+                        </div>
+
+                    </div>
+
+                    <div class="foot-btn_area">
+                        <button class="foot-btn">Let's talk</button>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="footer-row">
+
+                <div class="footer-parent">
+
+                    <h1 class="footer-logo">StartUp</h1>
+                    
+                    <ul class="nav-links">
+                        <a class="nav-link" href="">About Us</a>
+                        <a class="nav-link" href="">Services</a>
+                        <a class="nav-link" href="">Our Team</a>
+                        <a class="nav-link" href="">Contact Us</a>
+                    </ul>
+
+                    <small class="copy">Copyright &copy2023-bestbridge</small>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </footer>
 
 </body>
 
