--- a/index.html
+++ b/index.html
@@ -248,10 +248,16 @@
 
                                 <div class="solu-text_card">
 
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Digital Marketing</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Graphic Design</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Website Development</p>
+                                    </div>
+                                    <!-- <div class="solu-textChild_card"></div> -->
 
                                 </div>
 
@@ -277,10 +283,21 @@
 
                                 <div class="solu-text_card">
 
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Business Development Plan</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Business Analysis</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Marketing Strategy</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Growth & Expansion Strategy</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Brands Strategy & Development</p>
+                                    </div>
 
                                 </div>
 
@@ -306,10 +323,18 @@
 
                                 <div class="solu-text_card">
 
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
-                                    <div class="solu-textChild_card"></div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Leadership Development</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Personal Development</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Executive Development</p>
+                                    </div>
+                                    <div class="solu-textChild_card">
+                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Entrepreneurial Development</p>
+                                    </div>
 
                                 </div>
 
