--- a/assets/index.html
+++ b/assets/index.html
@@ -26,7 +26,7 @@
                     <h1 class="logo">StartUp</h1>
 
                     <ul class="nav-links">
-                        <a class="nav-link" href="">About Us</a>
+                        <a class="nav-link" href="./about.html">About Us</a>
                         <a class="nav-link" href="">Services</a>
                         <a class="nav-link" href="">Our Team</a>
 
