--- a/assets/about.html
+++ b/assets/about.html
@@ -80,6 +80,7 @@
         </header>
 
     </section>
+    
     <main>
         <section id="about-first_sec">
 
@@ -182,7 +183,7 @@
 
                         <small class="foot-smallHead">CONTACT</small>
                         <h2 class="foot-head">Take advantage of expert knowledge</h2>
-                        <p class="foot-para">Feel free to get in touch wwith us via email or phone</p>
+                        <p class="foot-para">Feel free to get in touch with us via email or phone</p>
 
                         <div class="foot-mailPhone">
                             <small class="foot-mail">info@bestbridge.com</small>
