--- a/assets/index.html
+++ b/assets/index.html
@@ -34,7 +34,7 @@
 
                     <div class="nav-btn_area">
 
-                        <a class="nav-link" href="">Contact Us</a>
+                        <a class="nav-link" href="./contact.html">Contact Us</a>
                         <button class="nav-btn">Get Started</button>
 
                     </div>
