--- a/assets/index.html
+++ b/assets/index.html
@@ -15,35 +15,36 @@
 </head>
 
 <body>
-    <section id="hero">
 
-        <nav>
+    <nav>
 
-            <div class="nav-container">
+        <div class="nav-container">
 
-                <div class="nav-row">
+            <div class="nav-row">
 
-                    <h1 class="logo">StartUp</h1>
+                <img class="logo" src="./consult-logo-1-croped.png" alt="">
 
-                    <ul class="nav-links">
-                        <a class="nav-link" href="./about.html">About Us</a>
-                        <a class="nav-link" href="">Services</a>
-                        <a class="nav-link" href="">Our Team</a>
+                <ul class="nav-links">
 
-                    </ul>
+                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./Training.html">Training</a>
+                    <a class="nav-link" href="./consulting.html">Consulting</a>
 
-                    <div class="nav-btn_area">
+                </ul>
 
-                        <a class="nav-link" href="./contact.html">Contact Us</a>
-                        <button class="nav-btn">Get Started</button>
+                <div class="nav-btn_area">
 
-                    </div>
+                    <a class="nav-link" href="./about.html">About Us</a>
+                    <a class="nav-link" href="./contact.html">Contact Us</a>
+                    <!-- <button class="nav-btn">Get Started</button> -->
 
                 </div>
 
             </div>
 
-        </nav>
+        </div>
+
+    </nav>
 
         <header>
 
@@ -85,7 +86,7 @@
 
         </header>
 
-    </section>
+  
 
     <main>
 
@@ -185,15 +186,15 @@
 
                             <div class="swiper mySwiper">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt="">
+                                    <!-- <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt=""> -->
                                     </div>
-                                    <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt="">
+                                    <!-- <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt=""> -->
                                     </div>
-                                    <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt="">
+                                    <!-- <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt=""> -->
                                     </div>
-                                    <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt="">
+                                    <!-- <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt=""> -->
                                     </div>
-                                    <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt="">
+                                    <!-- <div class="swiper-slide"><img class="swiper-img" src="./bus-hero.jpeg" alt=""> -->
                                     </div>
 
                                 </div>
@@ -219,137 +220,7 @@
 
         </section>
 
-        <section class="solution">
 
-            <div class="solution-container">
-
-                <div class="solution-row">
-
-                    <p class="solution-small_head">OUR SERVICES</p>
-                    <h2 class="solution-head">We help seizing technology & business opportunity</h2>
-                    <h4 class="solution-head_para">our technology services are designed to build the capabilities
-                        required to seize your technology opportunity</h4>
-
-                    <div class="solu-parent">
-
-                        <div class="solu-child_area">
-
-                            <figure class="solu-fig">
-                                <img class="solu-img" src="./tech-img.png" alt="">
-                            </figure>
-
-                            <div class="solu-text_area">
-
-                                <h2 class="solu-textHead">Technology Solutions</h2>
-                                <p class="solu-textPara">Design and accelerate future-ready technology strategies.</p>
-                                <p class="solu-textTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-                                    iusto fugiat earum nesciunt, eligendi animi doloremque magnam obcaecati nulla iste,
-                                    nemo pariatur rerum necessitatibus amet quasi quam sapiente inventore maiores.</p>
-
-                                <div class="solu-text_card">
-
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Digital Marketing</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Graphic Design</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Website Development</p>
-                                    </div>
-                                    <!-- <div class="solu-textChild_card"></div> -->
-
-                                </div>
-
-                                <button class="solu-btn">Send a request</button>
-
-                            </div>
-
-                        </div>
-
-                        <div class="solu-child_area">
-
-                            <figure class="solu-fig">
-                                <img class="solu-img" src="./bus-stars.png" alt="">
-                            </figure>
-
-                            <div class="solu-text_area">
-
-                                <h2 class="solu-textHead">Strategy & Business Solutions</h2>
-                                <p class="solu-textPara">Design and accelerate future-ready technology strategies.</p>
-                                <p class="solu-textTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-                                    iusto fugiat earum nesciunt, eligendi animi doloremque magnam obcaecati nulla iste,
-                                    nemo pariatur rerum necessitatibus amet quasi quam sapiente inventore maiores.</p>
-
-                                <div class="solu-text_card">
-
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Business Development Plan</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Business Analysis</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Marketing Strategy</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Growth & Expansion Strategy</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Brands Strategy & Development</p>
-                                    </div>
-
-                                </div>
-
-                                <button class="solu-btn">Send a request</button>
-
-                            </div>
-
-                        </div>
-
-                        <div class="solu-child_area">
-
-                            <figure class="solu-fig">
-                                <img class="solu-img" src="./tech-img.png" alt="">
-                            </figure>
-
-                            <div class="solu-text_area">
-
-                                <h2 class="solu-textHead">Trading Solutions</h2>
-                                <p class="solu-textPara">Design and accelerate future-ready technology strategies.</p>
-                                <p class="solu-textTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-                                    iusto fugiat earum nesciunt, eligendi animi doloremque magnam obcaecati nulla iste,
-                                    nemo pariatur rerum necessitatibus amet quasi quam sapiente inventore maiores.</p>
-
-                                <div class="solu-text_card">
-
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Leadership Development</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Personal Development</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Executive Development</p>
-                                    </div>
-                                    <div class="solu-textChild_card">
-                                        <p class="soluPara"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i>Entrepreneurial Development</p>
-                                    </div>
-
-                                </div>
-
-                                <button class="solu-btn">Send a request</button>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-
-        </section>
 
 
         <section id="testimonials">
@@ -421,7 +292,7 @@
 
                         <div class="con-btnArea">
                             <button class="get-btn">Get Started</button>
-                            <button class="con-btn">Contact Us</button>
+                            <button class="con-btn"><a class="con-btn_an" href="./contact.html">Contact Us</a></button>
                         </div>
 
                     </div>
@@ -458,7 +329,7 @@
                     </div>
 
                     <div class="foot-btn_area">
-                        <button class="foot-btn">Let's talk</button>
+                        <button class="foot-btn"><a class="foot-btn_an" href="./contact.html">Let's talk</a></button>
                     </div>
 
                 </div>
